langchain issus fixed 2

--- a/RAG_APICULTURA.ipynb
+++ b/RAG_APICULTURA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5350057e",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
     "import dotenv\n",
     "\n",
     "\n",
-    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_openai.chat_models.base import ChatOpenAI\n",
     "\n",
     "llm = ChatOpenAI(model=\"gpt-4o\")\n",
     "\n",
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d640a06e",
+   "id": "d1e680c5",
    "metadata": {},
    "outputs": [],
    "source": [
